Adding db config and product add for admin

--- a/StoreManagement/src/main/resources/application.yaml
+++ b/StoreManagement/src/main/resources/application.yaml
@@ -4,3 +4,19 @@ server:
 spring:
   main:
     allow-bean-definition-overriding: true
+  datasource:
+    url: jdbc:h2:file:./data/storedb    # persistent DB file
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update                    # auto-create/update tables
+    show-sql: true                         # print SQL statements
+    properties:
+      hibernate:
+        format_sql: true
+  h2:
+    console:
+      enabled: true                         # enable H2 web console
+      path: /h2-console
